@@ -6,12 +6,15 @@ import com.portfolio.backend.exception.ResourceNotFoundException;
 import com.portfolio.backend.provider.BlogDataProvider;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import static com.portfolio.backend.config.CacheConfig.*;
+
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,24 +23,28 @@ public class BlogService {
     private final BlogDataProvider blogDataProvider;
     private final ModelMapper modelMapper;
 
+    @Cacheable(BLOGS_CACHE)
     public List<BlogDTO> getAllBlogs() {
         return blogDataProvider.findAll().stream()
                 .map(blog -> modelMapper.map(blog, BlogDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Cacheable(PUBLISHED_BLOGS_CACHE)
     public List<BlogDTO> getPublishedBlogs() {
         return blogDataProvider.findByPublishedTrueOrderByDateDesc().stream()
                 .map(blog -> modelMapper.map(blog, BlogDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Cacheable(value = BLOG_BY_ID_CACHE, key = "#id")
     public BlogDTO getBlogById(Long id) {
         Blog blog = blogDataProvider.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Blog not found with id: " + id));
         return modelMapper.map(blog, BlogDTO.class);
     }
 
+    @Cacheable(value = BLOG_BY_SLUG_CACHE, key = "#slug")
     public BlogDTO getBlogBySlug(String slug) {
         Blog blog = blogDataProvider.findBySlug(slug)
                 .orElseThrow(() -> new ResourceNotFoundException("Blog not found with slug: " + slug));
@@ -53,6 +60,7 @@ public class BlogService {
     }
 
     @Transactional
+    @CacheEvict(value = {BLOGS_CACHE, PUBLISHED_BLOGS_CACHE}, allEntries = true)
     public BlogDTO createBlog(BlogDTO blogDTO) {
         Blog blog = modelMapper.map(blogDTO, Blog.class);
         
@@ -70,6 +78,7 @@ public class BlogService {
     }
 
     @Transactional
+    @CacheEvict(value = {BLOGS_CACHE, PUBLISHED_BLOGS_CACHE, BLOG_BY_ID_CACHE, BLOG_BY_SLUG_CACHE}, allEntries = true)
     public BlogDTO updateBlog(Long id, BlogDTO blogDTO) {
         Blog existingBlog = blogDataProvider.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Blog not found with id: " + id));
@@ -88,6 +97,7 @@ public class BlogService {
     }
 
     @Transactional
+    @CacheEvict(value = {BLOGS_CACHE, PUBLISHED_BLOGS_CACHE, BLOG_BY_ID_CACHE, BLOG_BY_SLUG_CACHE}, allEntries = true)
     public void deleteBlog(Long id) {
         if (!blogDataProvider.existsById(id)) {
             throw new ResourceNotFoundException("Blog not found with id: " + id);
